Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112474

QNetworkAccessManager: CANNOT GET RETURN FROM HTTP POST

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.6.0
    • 6.6.0
    • Network: HTTP
    • None
    • ubuntu20.04/QT6.6.0-dev
    • WebAssembly
    • ce5fb1e70 (dev)

    Description

      I CAN NOT GET  HTTP POST ERROR MSG WHEN STATUS is not 200

      SO, I cannot get and parse the http error in wasm page when http post return errorcode in [500,404,...]

      but, this test code is work normal in local ubuntu system

      Attachments

        For Gerrit Dashboard: QTBUG-112474
        # Subject Branch Project Status CR V

        Activity

          People

            mikolaj.boc Mikołaj Boc (Inactive)
            cigepan aaa bbb
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes